--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ img {
 .logo {
   background-color: var(--basic-red);
   box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+  cursor: pointer;
 }
 
 .logo:active {
@@ -103,7 +104,7 @@ img {
   color: var(--basic-black);
   border-color: var(--basic-white);
   background-color: var(--basic-white);
-  border: none;
+  outline: none;
 }
 
 .search-field:focus::placeholder {
@@ -217,7 +218,58 @@ img {
   display: none;
 }
 
+.catalog-slider-controls label {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: var(--basic-white);
+  position: relative;
+  cursor: pointer;
+}
+
+#catalog-slider-btn-1:checked ~ .catalog-slider-controls label[for="catalog-slider-btn-1"]::after,
+#catalog-slider-btn-2:checked ~ .catalog-slider-controls label[for="catalog-slider-btn-2"]::after {
+  content: "";
+  display: block;
+  width: 6px;
+  height: 6px;
+  background-color: var(--basic-red);
+  border-radius: 50%;
+  position: absolute;
+  left: 2px;
+  top: 2px;
+}
+
+.btn-slider-previous {
+  border: none;
+  border-bottom: 3px solid var(--basic-white);
+  border-left: 3px solid var(--basic-white);
+  background-color: transparent;
+  transform: rotate(45deg);
+  width: 27px;
+  height: 27px;
+  cursor: pointer;
+}
+
+.btn-slider-next {
+  border: none;
+  border-bottom: 3px solid var(--basic-white);
+  border-right: 3px solid var(--basic-white);
+  background-color: transparent;
+  transform: rotate(-45deg);
+  width: 27px;
+  height: 27px;
+  cursor: pointer;
+}
+
+.btn-slider-previous:focus,
+.btn-slider-next:focus {
+  outline: none;
+}
+
 .catalog-slide-title {
+  text-transform: uppercase;
   font-weight: bold;
   font-size: 36px;
   line-height: 36px;
@@ -394,6 +446,33 @@ img {
   line-height: 18px;
   color: var(--basic-white);
   background-color: var(--basic-red);
+  display: inline-block;
+  width: 122px;
+  height: 38px;
+  margin: 0;
+  padding: 10px 0;
+  text-align: center;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.product-price::after {
+  content: "";
+  border: 19px solid var(--basic-red);
+  border-right-width: 0;
+  border-bottom-color: transparent;
+  border-top-color: transparent;
+  position: absolute;
+  left: 122px;
+  top: 0px;
+}
+
+/* Brands */
+
+.brands-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 /* Services */
@@ -434,7 +513,7 @@ img {
 
 .section-text {
   font: inherit;
-  font-family: PT Sans;
+  font-family: "PT Sans", Arial, sans-serif;
 }
 
 .delivery-companies {
@@ -620,7 +699,7 @@ img {
 
 .products-sort-title {
   text-transform: uppercase;
-  font-family: PT Sans;
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
   color: var(--basic-black);
@@ -629,7 +708,7 @@ img {
 .products-sort-link {
   text-decoration: none;
   text-transform: uppercase;
-  font-family: PT Sans;
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 17px;
   color: var(--black-opacity-3);
@@ -647,6 +726,37 @@ img {
   color: var(--basic-red);
 }
 
+.sort-arrow-up {
+  display: inline-block;
+  text-decoration: none;
+  border-top-width: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 10px solid var(--lnk-hover-active-grey);
+}
+
+.sort-arrow-down {
+  display: inline-block;
+  text-decoration: none;
+  width: 0;
+  height: 0;
+  border-bottom-width: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 10px solid var(--lnk-hover-active-grey);
+}
+
+.sort-arrow-up:hover,
+.sort-arrow-down:hover {
+  border-top-color: var(--basic-black);
+  border-bottom-color: var(--basic-black);
+}
+
+.sort-arrow-active {
+  border-top-color: var(--basic-red);
+  border-bottom-color: var(--basic-red);
+}
+
 .catalog-products-list {
   list-style: none;
   margin: 0;
@@ -661,7 +771,7 @@ img {
 
 .page-link {
   text-decoration: none;
-  font-family: PT Sans;
+  font-family: "PT Sans", Arial, sans-serif;
   font-weight: normal;
   font-size: 13px;
   line-height: 18px;
