--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@
   --basic-pink: #dc91d8;
 
   --basic-light-grey-form: #f7f3ec;
+  --breadcrumb-grey: #c1c6ce;
   --black-opacity-3: rgba(0, 0, 0, 0.3);
 }
 
@@ -75,6 +76,8 @@ img {
 .container {
   width: 940px;
   margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 /* Grid */
@@ -96,9 +99,11 @@ img {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows:
-    42px 158px 60px 60px;
+    42px
+    158px
+    60px
+    60px;
   background-color: var(--basic-lighter-blue);
-  margin-bottom: 59px;
 }
 
 /* Header-top */
@@ -179,7 +184,7 @@ img {
 
 .header-bookmarks {
   display: inline-block;
-  width: 150px;
+  width: 164px;
   height: 42px;
   padding: 9px 24px 9px 43px;
   background-color: var(--basic-dark-grey);
@@ -187,9 +192,9 @@ img {
 
 .header-cart {
   display: inline-block;
-  width: 150px;
+  width: 136px;
   height: 42px;
-  padding: 10px 20px 9px 49px;
+  padding: 10px 20px 9px 35px;
   background-color: var(--basic-dark-grey);
 }
 
@@ -206,9 +211,11 @@ img {
 
 .header-middle {
   display: grid;
-  grid-template-columns: 30px 220px 70px 269px 70px 122px 9px 150px;
+  grid-template-columns: 30px 220px 70px 321px 18px 122px 9px 150px;
   grid-template-rows:
-    46px 45px 67px;
+    46px
+    45px
+    67px;
 }
 
 .header-text {
@@ -275,6 +282,45 @@ img {
   grid-column: -1 / -2;
 }
 
+.btn-username {
+  grid-row: 2 / 3;
+  grid-column: -5 / -1;
+  padding: 12px 56px;
+}
+
+.btn-exit {
+  width: 20px;            /* w+h, overflow временно*/
+  height: 20px;
+  overflow: hidden;
+  grid-row: 2 / 3;
+  grid-column: -1 / -2;
+  justify-self: end;
+  align-self: center;
+  margin-right: 18px;
+}
+
+.lnk-my-orders {
+  grid-row: -2 / -1;
+  grid-column: -4 / -3;
+  justify-self: end;
+}
+
+.lnk-my-orders::after {
+  content: "";
+  display: inline-block;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: var(--basic-black);
+  margin: 12px 3px 3px 10px;
+}
+
+.lnk-my-cabinet {
+  grid-row: -2 / -1;
+  grid-column: -2 / -1;
+  margin-top: 5px;
+}
+
 /* Main navigation */
 
 .main-navigation {
@@ -285,7 +331,7 @@ img {
 .site-navigation {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 25px;
   grid-row: -2 / -3;
   display: flex;
   justify-content: space-around;
@@ -303,7 +349,7 @@ img {
   line-height: 24px;
   color: var(--basic-white);
   cursor: pointer;
-  padding: 16px 30px;
+  padding: 17px 25px 19px;
 }
 
 .navigation-link:hover {
@@ -318,6 +364,7 @@ img {
 
 .catalog {
   background-color: var(--basic-white);
+  margin-top: 59px;
   margin-bottom: 59px;
   display: grid;
   grid-template-columns: repeat(3, 300px);
@@ -618,6 +665,10 @@ img {
   padding: 0;
 }
 
+.btn-product {
+  flex-shrink: 0;
+}
+
 .product-list {
   list-style: none;
   margin: 0;
@@ -738,6 +789,12 @@ img {
   grid-template-rows: 89px 1fr;
   grid-gap: 20px;
   margin-bottom: 70px;
+}
+
+.btn-brands {
+  flex-shrink: 0;
+  margin-right: 5px;
+  margin-bottom: 1px;
 }
 
 .brands-list {
@@ -1180,6 +1237,10 @@ a.footer-develop {
 
 /* Catalog-header*/
 
+.header-cart-active {
+  background-color: var(--basic-red);
+}
+
 .lnk-userdata {
   text-decoration: none;
   font-weight: normal;
@@ -1196,10 +1257,28 @@ a.footer-develop {
   color: var(--lnk-hover-active-grey);
 }
 
+/* Catalog - main */
+
 .breadcrumbs {
   list-style: none;
   margin: 0;
   padding: 0;
+  height: 59px;
+  display: grid;
+  grid-template-columns: repeat(4, max-content);
+  align-items: center;
+}
+
+.breadcrumb-item:not(:first-child)::before {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-right: 1px solid var(--breadcrumb-grey);
+  border-bottom: 1px solid var(--breadcrumb-grey);
+  transform: rotate(-45deg);
+  margin-right: 17px;
+  margin-left: 17px;
 }
 
 .breadcrumb-link {
@@ -1212,14 +1291,46 @@ a.footer-develop {
   cursor: pointer;
 }
 
-.products-sort-list {
-  list-style: none;
+.products-section {
+  display: grid;
+  grid-template-rows: 89px 1201px;
+  grid-gap: 20px;
+}
+
+.catalog-section-title {
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: normal;
+  line-height: 30px;
+  color: var(--basic-grey);
   margin: 0;
-  padding: 0;
+  padding: 29px;
+  background-color: var(--basic-lighter-blue);
+}
+
+.catalog-products {
+  display: grid;
+  grid-template-columns: 220px 20px 700px;
+  grid-template-rows:
+   38px
+   28px
+   max-content
+   48px
+   97px;
+}
+
+.product-filter {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 }
 
 .products-sort {
   background-color: var(--basic-light-grey-form);
+  grid-column: -1 / -2;
+  grid-row: 1 / 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .products-sort-title {
@@ -1228,6 +1339,17 @@ a.footer-develop {
   font-size: 13px;
   line-height: 18px;
   color: var(--basic-black);
+  margin: 0 0 0 20px;
+  padding: 0;
+}
+
+.products-sort-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 123px 118px 159px 32px 26px;
+  align-items: center;
 }
 
 .products-sort-link {
@@ -1282,28 +1404,50 @@ a.footer-develop {
   border-bottom-color: var(--basic-red);
 }
 
-.catalog-products-list {
+.page-catalog-product-list {
   list-style: none;
   margin: 0;
   padding: 0;
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+  display: grid;
+  grid-template-columns: repeat(3, 220px);
+  grid-column-gap: 20px;
+  grid-row-gap: 18px;
 }
 
 .pagination {
   list-style: none;
   margin: 0;
   padding: 0;
+  grid-column: 3 / 4;
+  grid-row: -1 / -2;
+  display: grid;
+  grid-template-columns: repeat(3, 48px) min-content;
 }
 
 .page-link {
   text-decoration: none;
+  text-transform: uppercase;
   font-family: "PT Sans", Arial, sans-serif;
   font-weight: normal;
   font-size: 13px;
   line-height: 18px;
   color: var(--basic-black);
   background-color: var(--basic-white);
+  display: inline-block;
+  width: 38px;
+  height: 38px;
   border: 1px solid var(--lnk-pagination-grey);
+  border-radius: 2px;
+  box-sizing: border-box;
+  text-align: center;
+  padding: 10px 0;
   cursor: pointer;
+}
+
+.page-link-wide {
+  width: 140px;
 }
 
 .page-link:hover {
@@ -1315,9 +1459,24 @@ a.footer-develop {
 }
 
 .page-link-active {
+  color: var(--basic-white);
   background-color: var(--basic-red);
 }
 
 .about-products {
   background-color: var(--basic-light-blue);
+}
+
+.about-products-grid {
+  display: grid;
+  grid-template-rows: 64px 55px 141px;
+}
+
+.about-products-title {
+  padding: 0;
+  grid-row: 2 / 3;
+}
+
+.about-products-text {
+  grid-row: -1 / -2;
 }
