--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 
 :root {
   --basic-black: #000000;
+  --social-link-black: #212a3a;
   --basic-dark-grey: #293449;
   --basic-grey: #32425c;
   --label-border-grey: #405069;
@@ -24,6 +25,7 @@
   --basic-darker-red: #ba2732;
   --basic-dark-red: #ca2c37;
   --basic-red: #ee3643;
+  --btn-red-service-credit: #ff5357;
 
   --btn-darker-green: #367315;
   --btn-dark-green: #518534;
@@ -40,6 +42,7 @@
   --basic-light-grey-form: #f7f3ec;
   --breadcrumb-grey: #c1c6ce;
   --black-opacity-3: rgba(0, 0, 0, 0.3);
+  --black-shadow-product-card: rgba(0, 0, 0, 0.15);
 }
 
 /* Global */
@@ -80,6 +83,13 @@ img {
   padding-right: 10px;
 }
 
+.container-960 {
+  width: 960px;
+  margin: 0 auto;
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+
 /* Grid */
 
 .page {
@@ -100,8 +110,8 @@ img {
   grid-template-columns: 1fr;
   grid-template-rows:
     42px
-    158px
-    60px
+    max-content
+    max-content
     60px;
   background-color: var(--basic-lighter-blue);
 }
@@ -210,12 +220,10 @@ img {
 /* Header-middle */
 
 .header-middle {
-  display: grid;
-  grid-template-columns: 30px 220px 70px 321px 18px 122px 9px 150px;
-  grid-template-rows:
-    46px
-    45px
-    67px;
+  display: flex;
+  padding-top: 46px;
+  padding-bottom: 40px;
+  justify-content: space-between;
 }
 
 .header-text {
@@ -223,10 +231,13 @@ img {
   font-size: 16px;
   line-height: 23px;
   color: var(--basic-red);
-  margin: 0;
+  width: 197px;
+  margin: 0 0 0 30px ;
   padding: 0;
-  grid-row: 2 / 4;
-  grid-column: 2 / 3;
+}
+
+.header-middle-contacts {
+  margin-left: 35px;
 }
 
 .header-phone {
@@ -237,19 +248,16 @@ img {
   color: var(--basic-red);
   border: 3px solid var(--basic-white);
   display: inline-block;
-  padding: 7px 42px 8px 71px;
+  padding: 5px 42px 5px 71px;
   width: 270px;
-  height: 45px;
   box-sizing: border-box;
-  grid-row: 2 / 3;
-  grid-column: 4 / 5;
 }
 
 .header-address {
   font: inherit;
   font-size: 14px;
-  grid-row: 3 / 4;
-  grid-column: 4 / 5;
+  width: 270px;
+  margin: 2px 0 0 11px;
 }
 
 .header-btn {
@@ -271,15 +279,16 @@ img {
 .btn-login {
   display: inline-block;
   padding: 12px 27px 12px 45px;
-  grid-row: 2 / 3;
-  grid-column: -3 / -4;
+  margin-right: 7px;
+  width: 120px;
+  box-sizing: border-box;
 }
 
 .btn-registration {
   display: inline-block;
   padding: 12px 24px;
-  grid-row: 2 / 3;
-  grid-column: -1 / -2;
+  width: 150px;
+  box-sizing: border-box;
 }
 
 .btn-username {
@@ -331,16 +340,15 @@ img {
 .site-navigation {
   list-style: none;
   margin: 0;
-  padding: 0 25px;
-  grid-row: -2 / -3;
+  padding: 0 26px;
   display: flex;
-  justify-content: space-around;
+  justify-content: start;
+  flex-wrap: wrap;
 }
 
 .navigation-item {
   display: flex;
-  align-items: center;
-  justify-items: center;
+  padding: 0 3px;
 }
 
 .navigation-link {
@@ -366,35 +374,33 @@ img {
   background-color: var(--basic-white);
   margin-top: 59px;
   margin-bottom: 59px;
-  display: grid;
-  grid-template-columns: repeat(3, 300px);
-  grid-template-rows: repeat(3, 123px);
-  grid-gap: 20px;
-  grid-template-areas:
-    "cards-top cards-top cards-top"
-    "slider slider cards-right"
-    "slider slider cards-right";
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .catalog-cards-list-top {
-  display: grid;
-  grid-template-columns: repeat(3, 300px);
-  grid-gap: 20px;
-  grid-area: cards-top;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  order: -1;
+  flex-wrap: wrap;
 }
 
 .catalog-cards-list-right {
-  display: grid;
-  grid-template-rows: repeat(2, 123px);
-  grid-gap: 20px;
-  grid-area: cards-right;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .catalog-slider {
   background-color: var(--basic-dark-grey);
   width: 620px;
   position: relative;
-  grid-area: slider;
+  align-self: flex-start;
 }
 
 .catalog-slider-inner {
@@ -413,7 +419,11 @@ img {
   display: grid;
   grid-template-columns: 24px 596px;
   grid-template-rows:
-    26px 46px 129px 65px;
+    23px
+    42px
+    136px
+    38px
+    27px;
 }
 
 .catalog-slide-image {
@@ -475,8 +485,8 @@ img {
   height: 27px;
   cursor: pointer;
   position: absolute;
-  top: 135px;
-  left: 25px;
+  top: 129px;
+  left: 30px;
   z-index: 2;
 }
 
@@ -490,8 +500,8 @@ img {
   height: 27px;
   cursor: pointer;
   position: absolute;
-  top: 135px;
-  right: 25px;
+  top: 129px;
+  right: 27px;
   z-index: 2;
 }
 
@@ -501,7 +511,7 @@ img {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  left: 50%;
+  left: 295px;
   bottom: 36px;
 }
 
@@ -530,18 +540,36 @@ img {
   z-index: 1;
 }
 
-.catalog-cards-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
 #catalog-slider-btn-1:checked~.catalog-slider-inner .catalog-slider-slides {
   transform: translate(0);
 }
 
 #catalog-slider-btn-2:checked~.catalog-slider-inner .catalog-slider-slides {
   transform: translate(-620px);
+}
+
+.catalog-cards-list-top .card-item {
+  margin: 0 20px 20px 0;
+}
+
+.catalog-cards-list-top .card-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.catalog-cards-list-right .card-item {
+  margin: 0 0 20px 20px;
+}
+
+.catalog-cards-list-right .card-item:last-child {
+  margin-bottom: 0;
+}
+
+.card-item {
+  width: 300px;
+  padding: 20px 23px;
+  box-sizing: border-box;
+  position: relative;
+  overflow: hidden;
 }
 
 .new::before {
@@ -552,9 +580,16 @@ img {
   background-color: var(--basic-red);
   width: 100px;
   height: 30px;
+  padding-top: 4px;
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: absolute;
+  z-index: 2;
+  transform: rotate(45deg);
+  right: -27px;
+  top: 8px;
 }
 
 .card-item-yellow {
@@ -582,7 +617,9 @@ img {
   font-size: 24px;
   line-height: 30px;
   color: var(--basic-white);
-  margin: 0;
+  width: 137px;
+  box-sizing: border-box;
+  margin: 0 0 13px 0;
   padding: 0;
 }
 
@@ -596,7 +633,6 @@ img {
   cursor: pointer;
   display: inline-block;
   width: 135px;
-  height: 38px;
   text-align: center;
   padding: 11px 0;
   box-sizing: border-box;
@@ -619,7 +655,7 @@ img {
   background-color: var(--basic-red);
   display: inline-block;
   width: 192px;
-  height: 38px;
+  /*height: 38px;*/
   padding: 11px 0 9px;
   text-align: center;
   box-sizing: border-box;
@@ -638,21 +674,17 @@ img {
 
 .product {
   background-color: var(--basic-white);
-  margin-bottom: 70px;
-  display: grid;
-  grid-template-rows: 89px 1fr;
-  grid-gap: 20px;
+  margin-bottom: 50px;
 }
 
 .section-header {
   background-color: var(--basic-light-grey);
-  height: 89px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-left: 28px;
-  padding-right: 14px;
+  margin-bottom: 20px;
+  padding: 25px 14px 26px 28px;
 }
 
 .section-title {
@@ -673,21 +705,55 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: repeat(4, 220px);
-  grid-gap: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  flex-wrap: wrap;
 }
 
 .product-item {
   border: 1px solid var(--card-border-light-grey);
   width: 220px;
-  height: 318px;
-  display: grid;
+  min-height: 318px;
   box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px 18px;
+}
+
+.product-item-main {
+  margin: 0 20px 20px 0;
+}
+
+.product-item-main:nth-child(4n) {
+  margin-right: 0;
+}
+
+.product-item:hover {
+  box-shadow: 0px 4px 20px var(--black-shadow-product-card);
+}
+
+.product-item:hover .product-hover {
+  display: flex;
+}
+
+.product-item:hover .product-image {
+  display: none;
 }
 
 .product-hover {
+  width: 100%;
+  height: 139px;
+  margin-bottom: 18px;
+  padding-top: 17px;
+  box-sizing: border-box;
   display: none;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 }
 
 .btn-green {
@@ -701,8 +767,10 @@ img {
   display: inline-block;
   width: 135px;
   height: 38px;
-  padding: 10px 12px 10px 48px;
+  margin-bottom: 10px;
+  padding: 10px 7px 10px 52px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .btn-green:hover {
@@ -724,9 +792,9 @@ img {
   display: inline-block;
   width: 135px;
   height: 38px;
-  text-align: center;
-  padding: 9px 0 11px;
+  padding: 8px 7px 9px 29px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .btn-green-border:hover {
@@ -737,37 +805,61 @@ img {
   opacity: 0.5;
 }
 
+.product-image {
+  width: 100%;
+  height: 139px;
+  align-self: start;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 18px;
+}
+
 .product-link {
   text-decoration: none;
+  font-family: "PT Sans", Arial, sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
   color: var(--basic-black);
   cursor: pointer;
+  width: 160px;
+  margin-top: 3px;
+  margin-bottom: 6px;
+  align-self: center;
+  text-align: center;
 }
 
 .product-old-price {
   text-decoration: line-through;
+  font-family: "PT Sans", Arial, sans-serif;
   font-weight: bold;
-  font-size: 18px;
-  line-height: 20px;
+  font-size: 17px;
+  line-height: 18px;
   color: var(--old-price-light-grey);
+}
+
+.product-old-price-p {
+  margin: 0;
+  padding: 0;
+  align-self: center;
 }
 
 .product-price {
   text-transform: uppercase;
+  font-family: "PT Sans", Arial, sans-serif;
   font-weight: bold;
   font-size: 17px;
   line-height: 18px;
   color: var(--basic-white);
   background-color: var(--basic-red);
+  border-radius: 4px 0 0 4px;
   display: inline-block;
   width: 122px;
-  height: 38px;
-  margin: 0;
-  padding: 10px 0;
-  text-align: center;
+  margin: auto 6px 0 0;
+  padding: 10px 0 10px 34px;
   box-sizing: border-box;
+  align-self: center;
   position: relative;
 }
 
@@ -785,10 +877,7 @@ img {
 /* Brands */
 
 .brands {
-  display: grid;
-  grid-template-rows: 89px 1fr;
-  grid-gap: 20px;
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
 
 .btn-brands {
@@ -801,10 +890,8 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 145 px);
-  grid-gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .brand-item {
@@ -812,6 +899,12 @@ img {
   height: 145px;
   border: 1px solid var(--card-border-light-grey);
   box-sizing: border-box;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.brand-item:nth-child(4n) {
+  margin-right: 0;
 }
 
 .brand-link {
@@ -828,35 +921,31 @@ img {
 .services {
   background-color: var(--basic-light-blue);
   width: 100%;
-  height: 522px;
   margin-bottom: 70px;
+  padding-top: 64px;
+  padding-bottom: 55px;
 }
 
-.services-grid {
-  display: grid;
-  grid-template-rows:
-    64px
-    55px
-    70px;
+.services-inner {
+  display: flex;
+  flex-direction: column;
 }
 
-.services-grid .section-title {
-  grid-row: 2 / 3;
+.services-inner .section-title {
+  margin-bottom: 25px;
+  width: 700px;
 }
 
-.services-grid .section-text {
-  grid-row: 3 / 4;
+.services-inner .section-text {
+  width: 700px;
 }
 
 .services-slider {
   width: 620px;
-  height: 279px;
-  grid-row: 4 / -1;
+  margin-top: 68px;
+  margin-bottom: 45px;
   display: grid;
   grid-template-columns: 320px 1fr;
-  grid-template-rows:
-    49px
-    1fr;
 }
 
 .services-slider input[type="radio"] {
@@ -865,7 +954,7 @@ img {
 
 .services-slider-inner {
   overflow: hidden;
-  width: 300px;
+  width: 620px;
   grid-row: 2 / -1;
   grid-column: 2 / -1;
 }
@@ -877,8 +966,9 @@ img {
 }
 
 .service-slide {
-  width: 300px;
-  height: 160px;
+  width: 620px;
+  display: flex;
+  flex-direction: column;
 }
 
 .service-slide-title {
@@ -887,14 +977,33 @@ img {
   font-weight: 400;
   font-size: 30px;
   line-height: 30px;
-  margin: 0;
+  margin: 0 0 30px 0;
   padding: 0;
-  margin-bottom: 25px;
+}
+
+.service-slide .section-text {
+  width: 318px;
+  /*margin-bottom: 32px;*/
+}
+
+.btn-service-credit {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--basic-white);
+  background-color: var(--btn-red-service-credit);
+  padding: 10px 44px 11px 46px;
+  border-radius: 3px;
+  align-self: start;
+  margin-top: 25px;
 }
 
 .services-slider-controls {
   grid-column: 1 / 2;
   grid-row: 2 / -1;
+  margin-top: 4px;
 }
 
 .services-slider-controls label {
@@ -905,7 +1014,8 @@ img {
   background-color: var(--basic-grey);
   cursor: pointer;
   width: 240px;
-  height: 61px;
+  padding: 13px 0 18px 22px;
+  box-sizing: border-box;
   display: flex;
 }
 
@@ -931,44 +1041,29 @@ img {
 }
 
 #slider-btn-warranty:checked ~ .services-slider-inner .services-slider-slides {
-  transform: translate(-300px);
+  transform: translate(-620px);
 }
 
 #slider-btn-credit:checked ~ .services-slider-inner .services-slider-slides {
-  transform: translate(-600px);
+  transform: translate(-1240px);
 }
 
 /* Company-Contacts */
 
 .company-contacts {
   background-color: var(--basic-white);
-  width: 940px;
-  height: 356px;
   margin-bottom: 70px;
-  display: grid;
-  grid-template-columns: 450px 190px 299px;
-  grid-template-rows:
-    59px
-    76px
-    23px
-    49px
-    111px
-    38px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.company {
+  width: 500px;
 }
 
 .title-company {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-
-.text-company-top {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
-}
-
-.text-company-bottom {
-  grid-column: 1 / 2;
-  grid-row: 4 / 5;
+  margin-bottom: 24px;
 }
 
 .section-text {
@@ -978,15 +1073,25 @@ img {
   padding: 0;
 }
 
+.text-company-top {
+  margin-bottom: 26px;
+}
+
+.text-company-bottom {
+  margin-bottom: 3px;
+}
+
 .delivery-companies {
   list-style: none;
   font-size: 18px;
   line-height: 24px;
   color: var(--basic-black);
-  margin: 0;
+  margin: 0 0 18px 0;
   padding: 0;
-  grid-column: 1 / 2;
-  grid-row: -3 / -2;
+}
+
+.delivery-company-item {
+  margin-bottom: 12px;
 }
 
 .delivery-company-link {
@@ -997,31 +1102,29 @@ img {
   color: var(--basic-black);
 }
 
-.btn-company {
-  width: 220px;
-  grid-column: 1 / 2;
-  grid-row: -2 / -1;
-}
-
 .title-contacts {
-  grid-column: -2 / -1;
-  grid-row: 1 / 2;
+  margin-bottom: 24px;
 }
 
 .text-contacts {
-  grid-column: -2 / -1;
-  grid-row: 2 / 3;
+  margin-bottom: 33px;
 }
 
 .map-contacts {
-  grid-column: -2 / -1;
-  grid-row: 3 / 6;
+  margin-bottom: 16px;
+}
+
+.btn-company {
+  width: 220px;
+}
+
+.contacts {
+  width: 300px;
+  /*margin-left: auto;*/
 }
 
 .btn-contacts {
   width: 300px;
-  grid-column: -2 / -1;
-  grid-row: -1 / -2;
 }
 
 /* Footer */
@@ -1041,17 +1144,15 @@ img {
   background-color: var(--basic-dark-grey);
 }
 
-.grid-footer-top {
-  width: 940px;
-  height: 193px;
-  display: grid;
-  grid-template-columns: 393px 23px 524px;
-  grid-template-rows:
-    37px
-    18px
-    40px
-    18px
-    80px;
+.footer-top-inner {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 54px;
+}
+
+.footer-top-left {
+  width: 330px;
+  flex-shrink: 0;
 }
 
 .logo-footer {
@@ -1060,11 +1161,11 @@ img {
   cursor: pointer;
   display: inline-block;
   width: 220px;
-  height:68px;
+  height: 68px;
   padding: 20px 41px 25px 41px;
   box-sizing: border-box;
-  grid-column: 1 / 2;
-  grid-row: 1 / 4;
+  flex-shrink: 0;
+  margin-bottom: 23px;
 }
 
 .logo-footer:active {
@@ -1073,29 +1174,34 @@ img {
 
 .footer-address {
   font: inherit;
-  grid-column: 1 / 2;
-  grid-row: 4 / 5;
+  margin-left: 3px;
 }
 
 .footer-phone {
   text-decoration: none;
   font: inherit;
   color: var(--basic-light-blue);
-  grid-column: 1 / 2;
-  grid-row: 5 / 6;
+  margin-left: 3px;
+}
+
+.footer-top-right {
+  width: 550px;
+  padding-top: 38px;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: start;
+  flex-wrap: wrap;
 }
 
 .footer-navigation-list {
   list-style: none;
-  margin: 0;
+  margin: 0 0 14px 0;
   padding: 0;
   width: 547px;
-  height: 18px;
-  grid-column: 2 / 4;
-  grid-row: 2 / 3;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .footer-navigation-link {
@@ -1119,12 +1225,10 @@ img {
   margin: 0;
   padding: 0;
   width: 524px;
-  height: 18px;
-  grid-column: 3 / 4;
-  grid-row: 4 / 5;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .footer-catalog-link {
@@ -1143,15 +1247,10 @@ img {
   opacity: 0.5;
 }
 
-.grid-footer-bottom {
-  width: 940px;
-  height: 107px;
-  display: grid;
-  grid-template-columns: 389px 134px 118px 188px 111px;
-  grid-template-rows:
-    36px
-    20px
-    51px;
+.footer-bottom-inner {
+  padding: 33px 0 30px 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer-copyright {
@@ -1159,32 +1258,57 @@ img {
   font-size: 16px;
   line-height: 18px;
   color: var(--basic-white);
-  margin: 0;
+  width: 228px;
+  margin: 3px 0 0 0;
   padding: 0;
-  grid-column: 1 / 2;
-  grid-row: 2 / 4;
 }
 
 .footer-social-list {
   list-style: none;
-  margin: 0;
+  margin: 0 0 0 43px;
   padding: 0;
-  grid-column: 2 / 3;
-  grid-row: 2 / 4;
+  width: 134px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer-social-link {
-  text-decoration: none;
-  color: var(--basic-white);
+  width: 44px;
+  height: 44px;
+  display: block;
+  background-color: var(--social-link-black);
+  background-position: center center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
   cursor: pointer;
 }
 
 .footer-social-link:hover {
-  color: var(--basic-red);
+  background-color: var(--basic-red);
 }
 
 .footer-social-link:active {
-  color: var(--basic-red);
+  background-color: var(--basic-red);
+}
+
+.social-link-vk {
+  background-image: url('../img/icon-vk.svg');
+}
+
+.social-link-fb {
+  background-image: url('../img/icon-fb.svg');
+}
+
+.social-link-in {
+  background-image: url('../img/icon-insta.svg');
+}
+
+.footer-bottom-right {
+  width: 286px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3px;
+  padding: 0 13px 0 0;
 }
 
 .footer-contacts-text {
@@ -1192,9 +1316,8 @@ img {
   font-size: 16px;
   line-height: 18px;
   color: var(--basic-white);
-  margin: 0;
+  margin: 0 0 -3px 0;
   padding: 0;
-  margin-bottom: 10px;
 }
 
 .footer-contacts-link {
@@ -1213,26 +1336,6 @@ img {
 .footer-contacts-link:active {
   text-decoration: none;
   color: var(--basic-red);
-}
-
-p.footer-email {
-  grid-column: -3 / -2;
-  grid-row: 2 / 3;
-}
-
-a.footer-email {
-  grid-column: -3 / -2;
-  grid-row: -2 / -1;
-}
-
-p.footer-develop {
-  grid-column: -1 / -2;
-  grid-row: 2 / 3;
-}
-
-a.footer-develop {
-  grid-column: -1 / -2;
-  grid-row: -2 / -1;
 }
 
 /* Catalog-header*/
@@ -1257,16 +1360,14 @@ a.footer-develop {
   color: var(--lnk-hover-active-grey);
 }
 
-/* Catalog - main */
+/* Catalog - Page */
 
 .breadcrumbs {
   list-style: none;
   margin: 0;
   padding: 0;
   height: 59px;
-  display: grid;
-  grid-template-columns: repeat(4, max-content);
-  align-items: center;
+  display: flex;
 }
 
 .breadcrumb-item:not(:first-child)::before {
@@ -1292,9 +1393,9 @@ a.footer-develop {
 }
 
 .products-section {
-  display: grid;
+  /*display: grid;
   grid-template-rows: 89px 1201px;
-  grid-gap: 20px;
+  grid-gap: 20px;*/
 }
 
 .catalog-section-title {
